fixed weird interaction with menu opening on narrow displays

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -1,7 +1,7 @@
 .profile-pic{
   object-fit: cover;
-  width: 14rem;
-  height: 14rem;
+  width: 230px;
+  height: 230px;
   margin-bottom: 1.2rem;
   border-radius: 50%;
 }
